--- a/dashboard.html
+++ b/dashboard.html
@@ -144,13 +144,23 @@
             }
             kbs.forEach(kb => {
                 const docListHTML = kb.documents.length > 0 
-                    ? kb.documents.map(doc => `
-                        <li class="flex justify-between items-center group py-1">
-                            <span>- ${doc.file_name}</span>
-                            <button onclick="deleteDocument('${doc.id}')" class="text-red-500 opacity-0 group-hover:opacity-100 transition-opacity">
-                                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd"></path></svg>
-                            </button>
-                        </li>`).join('') 
+                    ? kb.documents.map(doc => {
+                        let statusHTML = '';
+                        if (doc.status === 'processing') {
+                            statusHTML = `<span class="text-xs font-semibold text-yellow-400 animate-pulse">Processing...</span>`;
+                            // --- THIS IS THE NEW LINE ---
+                            pollDocumentStatus(doc.id); // Start polling for this document
+                        } else {
+                            statusHTML = `<button onclick="deleteDocument('${doc.id}')" class="text-red-500 opacity-0 group-hover:opacity-100 transition-opacity">
+                                            <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd"></path></svg>
+                                          </button>`;
+                        }
+                        // --- THIS LI IS UPDATED TO INCLUDE AN ID ---
+                        return `<li id="doc-${doc.id}" class="flex justify-between items-center group py-1">
+                                    <span>- ${doc.file_name}</span>
+                                    <div class="doc-status">${statusHTML}</div>
+                                </li>`;
+                    }).join('') 
                     : '<li class="text-gray-500">No documents yet.</li>';
 
                 const kbElement = document.createElement('div');
@@ -173,6 +183,32 @@
                 `;
                 kbList.appendChild(kbElement);
             });
+        }
+
+        async function pollDocumentStatus(docId) {
+            const interval = setInterval(async () => {
+                try {
+                    if (!userToken) { clearInterval(interval); return; }
+                    const res = await fetch(`https://api.cogmatiq.com/documents/${docId}`, { headers: { 'Authorization': `Bearer ${userToken}` } });
+                    if (!res.ok) { clearInterval(interval); return; }
+                    
+                    const doc = await res.json();
+                    if (doc.status === 'ready') {
+                        clearInterval(interval);
+                        const docElement = document.getElementById(`doc-${docId}`);
+                        if (docElement) {
+                             const statusDiv = docElement.querySelector('.doc-status');
+                             if (statusDiv) {
+                                statusDiv.innerHTML = `<button onclick="deleteDocument('${doc.id}')" class="text-red-500 opacity-0 group-hover:opacity-100 transition-opacity">
+                                                        <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd"></path></svg>
+                                                    </button>`;
+                             }
+                        }
+                    }
+                } catch (error) {
+                    clearInterval(interval);
+                }
+            }, 5000); // Poll every 5 seconds
         }
         
         async function deleteDocument(docId) {
