--- a/success.html
+++ b/success.html
@@ -3,27 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Success! - Cogmatiq</title>
+    <title>Payment Successful - Cogmatiq</title>
+    <meta name="description" content="Your Cogmatiq Pro upgrade is complete. Access unlimited document analysis and advanced features now.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
     <style>
-        body { font-family: 'Manrope', sans-serif; background-color: #2C3E50; color: #FDFEFE; }
+        body { font-family: 'Manrope', sans-serif; background-color: #1A2533; color: #E5E7EB; }
+        .accent-text { color: #00B5AD; }
         .accent-bg { background-color: #00B5AD; }
         .accent-bg:hover { background-color: #009A94; }
+        .animate-fade-in { animation: fadeIn 1s ease-out; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .bg-gradient-dark { background: linear-gradient(to bottom, #1A2533, #111827); }
+        .hover-scale { transition: transform 0.3s ease; }
+        .hover-scale:hover { transform: scale(1.05); }
+        .card { background: #1F2A44; border: 1px solid #2D3748; }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen text-center p-4">
-    <div class="max-w-lg">
+<body class="flex flex-col items-center justify-center min-h-screen text-center p-4 bg-gradient-dark animate-fade-in">
+    <div class="max-w-lg card p-8 rounded-lg">
         <h1 class="text-4xl font-extrabold mb-4">Payment Successful!</h1>
-        <p class="text-lg text-gray-300 mb-8">Welcome to Cogmatiq Pro. Your account has been upgraded. You now have full access to all features.</p>
-        <a href="/dashboard.html" class="accent-bg text-white font-bold py-3 px-6 rounded-lg text-lg transition-colors duration-300">
-            Go to Your Dashboard
-        </a>
+        <p class="text-lg text-gray-400 mb-8">Welcome to Cogmatiq Pro. Your account is now upgraded, unlocking unlimited document analysis and advanced features.</p>
+        <a href="/dashboard.html" class="accent-bg text-white font-semibold py-3 px-6 rounded-lg text-lg hover-scale">Go to Your Dashboard</a>
     </div>
 </body>
 </html>
