Chat design fix

--- a/chat.html
+++ b/chat.html
@@ -47,7 +47,7 @@
         </div>
     </header>
 
-    <main class="flex-grow flex flex-col p-4 md:p-8 max-w-5xl w-full mx-auto animate-fade-in">
+    <main class="flex-grow flex flex-col p-4 md:p-8 pt-24 md:pt-28 max-w-5xl w-full mx-auto animate-fade-in">
         <div id="chat-container" class="flex-grow overflow-y-auto pr-4 space-y-6 card p-6 rounded-lg">
             <div class="flex items-start gap-3">
                 <div class="bg-gray-700/50 p-2 rounded-full">
