--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 
     <div class="w-full max-w-md">
         <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-90">
-            <svg class="w-8 h-8 accent-text" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
+            <img src="/logo.png" alt="Cogmatiq Logo" class="w-8 h-8 object-contain hover-scale">
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
 
@@ -50,36 +50,114 @@
                     <input type="password" id="password" required class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
-                    <button type="submit" class="w-full accent-bg text-white font-semibold py-3 px-4 rounded-md hover-scale">Sign In</button>
+                    <button type="submit" id="login-button" class="w-full accent-bg text-white font-semibold py-3 px-4 rounded-md hover-scale disabled:opacity-50" disabled>Sign In</button>
                 </div>
             </form>
             <p id="message" class="mt-4 text-center text-sm text-red-400"></p>
+            <div id="resend-email" class="mt-4 text-center hidden">
+                <p class="text-sm text-gray-400 mb-2">Email not verified? <button id="resend-button" class="accent-text font-semibold hover:underline">Resend Confirmation Email</button></p>
+            </div>
             <p class="mt-6 text-center text-sm text-gray-400">
                 Don't have an account? <a href="/signup.html" class="accent-text font-semibold hover:underline">Sign Up</a>
+            </p>
+            <p class="mt-2 text-center text-sm text-gray-400">
+                Forgot your password? <a href="/reset-password.html" class="accent-text font-semibold hover:underline">Reset Password</a>
             </p>
         </div>
     </div>
 
     <script>
         const supabaseUrl = 'https://wzekdxvvynpvisbvkiqg.supabase.co';
-        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind6ZWtkeHZ2eW5wdmlzYnZraXFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0NzA5NzAsImV4cCI6MjA3NjA0Njk3MH0.CGXF6Txv-OATQdaus08GohMHRyytye59hqaD0Q4BOSU';
+        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind6ZWtkeXZ2eW5wdmlzYnZraXFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0NzA5NzAsImV4cCI6MjA3NjA0Njk3MH0.CGXF6Txv-OATQdaus08GohMHRyytye59hqaD0Q4BOSU';
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
         const form = document.getElementById('login-form');
         const messageEl = document.getElementById('message');
+        const loginButton = document.getElementById('login-button');
+        const resendEmailDiv = document.getElementById('resend-email');
+        const resendButton = document.getElementById('resend-button');
+
+        // Enable login button once Supabase client is initialized
+        loginButton.disabled = false;
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             messageEl.textContent = '';
-            const email = document.getElementById('email').value;
+            resendEmailDiv.classList.add('hidden');
+            loginButton.disabled = true;
+
+            const email = document.getElementById('email').value.trim();
             const password = document.getElementById('password').value;
 
-            const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
+            try {
+                const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
 
-            if (error) {
-                messageEl.textContent = `Error: ${error.message}`;
-            } else {
+                if (error) {
+                    console.error('Supabase Auth Error:', {
+                        message: error.message,
+                        code: error.code,
+                        status: error.status,
+                        email: email
+                    });
+
+                    let userMessage = 'An error occurred. Please try again.';
+                    if (error.code === 'invalid_credentials') {
+                        userMessage = 'Invalid email or password. Please check your credentials.';
+                    } else if (error.code === 'email_not_confirmed') {
+                        userMessage = 'Please verify your email address before signing in.';
+                        resendEmailDiv.classList.remove('hidden');
+                    } else if (error.status === 401) {
+                        userMessage = 'Unauthorized: Invalid credentials or account not found.';
+                    }
+                    messageEl.textContent = userMessage;
+                    loginButton.disabled = false;
+                    return;
+                }
+
+                console.log('Login successful:', { userId: data.user.id, email: data.user.email });
                 window.location.href = '/dashboard.html';
+            } catch (err) {
+                console.error('Unexpected Error:', err);
+                messageEl.textContent = 'Unexpected error. Please try again later.';
+                loginButton.disabled = false;
+            }
+        });
+
+        resendButton.addEventListener('click', async () => {
+            const email = document.getElementById('email').value.trim();
+            if (!email) {
+                messageEl.textContent = 'Please enter your email to resend the confirmation.';
+                return;
+            }
+
+            resendButton.disabled = true;
+            messageEl.textContent = 'Sending confirmation email...';
+
+            try {
+                const { error } = await supabaseClient.auth.resend({
+                    type: 'signup',
+                    email: email
+                });
+
+                if (error) {
+                    console.error('Resend Confirmation Error:', {
+                        message: error.message,
+                        code: error.code,
+                        status: error.status
+                    });
+                    messageEl.textContent = `Error: ${error.message}`;
+                    resendButton.disabled = false;
+                    return;
+                }
+
+                messageEl.textContent = 'Confirmation email sent! Please check your inbox.';
+                messageEl.classList.remove('text-red-400');
+                messageEl.classList.add('text-green-400');
+                resendButton.disabled = false;
+            } catch (err) {
+                console.error('Unexpected Resend Error:', err);
+                messageEl.textContent = 'Unexpected error sending confirmation email.';
+                resendButton.disabled = false;
             }
         });
     </script>
