--- a/reset-password.html
+++ b/reset-password.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - Cogmatiq</title>
-    <meta name="description" content="Sign in to your Cogmatiq account to access your AI-powered knowledge bases and manage your documents securely.">
+    <title>Reset Password - Cogmatiq</title>
+    <meta name="description" content="Reset your Cogmatiq account password to regain access to your AI-powered knowledge bases.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,29 +39,23 @@
         </a>
 
         <div class="card p-8 rounded-lg shadow-lg">
-            <h1 class="text-2xl font-bold text-center mb-6">Welcome Back</h1>
-            <form id="login-form" class="space-y-6">
+            <h1 class="text-2xl font-bold text-center mb-6">Reset Your Password</h1>
+            <p class="text-center text-sm text-gray-400 mb-6">Enter your email address to receive a password reset link.</p>
+            <form id="reset-password-form" class="space-y-6">
                 <div>
                     <label for="email" class="block text-sm font-semibold text-gray-400">Email</label>
                     <input type="email" id="email" required class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
-                    <label for="password" class="block text-sm font-semibold text-gray-400">Password</label>
-                    <input type="password" id="password" required class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
-                </div>
-                <div>
-                    <button type="submit" id="login-button" class="w-full accent-bg text-white font-semibold py-3 px-4 rounded-md hover-scale disabled:opacity-50" disabled>Sign In</button>
+                    <button type="submit" id="reset-button" class="w-full accent-bg text-white font-semibold py-3 px-4 rounded-md hover-scale disabled:opacity-50" disabled>Send Reset Link</button>
                 </div>
             </form>
             <p id="message" class="mt-4 text-center text-sm text-red-400"></p>
-            <div id="resend-email" class="mt-4 text-center hidden">
-                <p class="text-sm text-gray-400 mb-2">Email not verified? <button id="resend-button" class="accent-text font-semibold hover:underline">Resend Confirmation Email</button></p>
-            </div>
             <p class="mt-6 text-center text-sm text-gray-400">
-                Don't have an account? <a href="/signup.html" class="accent-text font-semibold hover:underline">Sign Up</a>
+                Remember your password? <a href="/login.html" class="accent-text font-semibold hover:underline">Sign In</a>
             </p>
             <p class="mt-2 text-center text-sm text-gray-400">
-                Forgot your password? <a href="/reset-password.html" class="accent-text font-semibold hover:underline">Reset Password</a>
+                Don't have an account? <a href="/signup.html" class="accent-text font-semibold hover:underline">Sign Up</a>
             </p>
         </div>
     </div>
@@ -71,29 +65,27 @@
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind6ZWtkeXZ2eW5wdmlzYnZraXFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0NzA5NzAsImV4cCI6MjA3NjA0Njk3MH0.CGXF6Txv-OATQdaus08GohMHRyytye59hqaD0Q4BOSU';
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
-        const form = document.getElementById('login-form');
+        const form = document.getElementById('reset-password-form');
         const messageEl = document.getElementById('message');
-        const loginButton = document.getElementById('login-button');
-        const resendEmailDiv = document.getElementById('resend-email');
-        const resendButton = document.getElementById('resend-button');
+        const resetButton = document.getElementById('reset-button');
 
-        // Enable login button once Supabase client is initialized
-        loginButton.disabled = false;
+        // Enable reset button once Supabase client is initialized
+        resetButton.disabled = false;
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             messageEl.textContent = '';
-            resendEmailDiv.classList.add('hidden');
-            loginButton.disabled = true;
+            resetButton.disabled = true;
 
             const email = document.getElementById('email').value.trim();
-            const password = document.getElementById('password').value;
 
             try {
-                const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
+                const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+                    redirectTo: window.location.origin + '/update-password.html'
+                });
 
                 if (error) {
-                    console.error('Supabase Auth Error:', {
+                    console.error('Supabase Reset Password Error:', {
                         message: error.message,
                         code: error.code,
                         status: error.status,
@@ -101,63 +93,28 @@
                     });
 
                     let userMessage = 'An error occurred. Please try again.';
-                    if (error.code === 'invalid_credentials') {
-                        userMessage = 'Invalid email or password. Please check your credentials.';
-                    } else if (error.code === 'email_not_confirmed') {
-                        userMessage = 'Please verify your email address before signing in.';
-                        resendEmailDiv.classList.remove('hidden');
-                    } else if (error.status === 401) {
-                        userMessage = 'Unauthorized: Invalid credentials or account not found.';
+                    if (error.code === 'invalid_email') {
+                        userMessage = 'Please enter a valid email address.';
+                    } else if (error.code === 'user_not_found') {
+                        userMessage = 'No account found with this email.';
+                    } else if (error.status === 429) {
+                        userMessage = 'Too many requests. Please wait a few minutes and try again.';
                     }
                     messageEl.textContent = userMessage;
-                    loginButton.disabled = false;
+                    resetButton.disabled = false;
                     return;
                 }
 
-                console.log('Login successful:', { userId: data.user.id, email: data.user.email });
-                window.location.href = '/dashboard.html';
+                console.log('Password reset email sent:', { email });
+                messageEl.textContent = 'Password reset email sent! Please check your inbox.';
+                messageEl.classList.remove('text-red-400');
+                messageEl.classList.add('text-green-400');
+                form.reset();
+                resetButton.disabled = false;
             } catch (err) {
                 console.error('Unexpected Error:', err);
                 messageEl.textContent = 'Unexpected error. Please try again later.';
-                loginButton.disabled = false;
-            }
-        });
-
-        resendButton.addEventListener('click', async () => {
-            const email = document.getElementById('email').value.trim();
-            if (!email) {
-                messageEl.textContent = 'Please enter your email to resend the confirmation.';
-                return;
-            }
-
-            resendButton.disabled = true;
-            messageEl.textContent = 'Sending confirmation email...';
-
-            try {
-                const { error } = await supabaseClient.auth.resend({
-                    type: 'signup',
-                    email: email
-                });
-
-                if (error) {
-                    console.error('Resend Confirmation Error:', {
-                        message: error.message,
-                        code: error.code,
-                        status: error.status
-                    });
-                    messageEl.textContent = `Error: ${error.message}`;
-                    resendButton.disabled = false;
-                    return;
-                }
-
-                messageEl.textContent = 'Confirmation email sent! Please check your inbox.';
-                messageEl.classList.remove('text-red-400');
-                messageEl.classList.add('text-green-400');
-                resendButton.disabled = false;
-            } catch (err) {
-                console.error('Unexpected Resend Error:', err);
-                messageEl.textContent = 'Unexpected error sending confirmation email.';
-                resendButton.disabled = false;
+                resetButton.disabled = false;
             }
         });
     </script>
